Ultra 7 155H, Huawei Matebook X-pro 2024 does not restore after hibernation with Xe driver. i915 restores perfectly.
Attaching the dmesg log. If I try to restore from graphical system (wayland/wayfire) - I get dead picture on the screen, and can switch to text console and kill compositor bu can not start it again.
Log is from hibernating/resuming in text mode, but the same situation - I can work in text mode no issues but can not sart compositor as gt0/gt1 units seems to be dead after resume. There is some crash in the log related intel bios or something but it is happening as well with i915 driver and there is no issue with i915 all works perfectly.
Bulding as a module or as in-kernel driver does not change anything i915 works XE does not.
Suspend-resume to s0ix is ok in both cases - sleeps, wakes up, working.